[gd_scene load_steps=4 format=3 uid="uid://dxaf5gstd3bmn"]

[ext_resource type="Texture2D" uid="uid://baquqwh7c8ixx" path="res://icon.svg" id="1_7afbw"]
[ext_resource type="Script" path="res://player_ship/player_ship.gd" id="1_prugf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vj1u"]
size = Vector2(125, 125)

[node name="PlayerShip" type="CharacterBody2D"]
script = ExtResource("1_prugf")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("1_7afbw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_0vj1u")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
